# eye

./: .env.example  .gitignore  .yarnrc.yml  CHANGELOG.txt  Cargo.toml  README.md  package.json
.github/workflows/: main.yml
migrations/2019-11-04-030204_users/: down.sql  up.sql
migrations/2022-07-22-211751_pictures-various-res/: down.sql  up.sql
migrations/2022-08-24-205851_albums/: down.sql
migrations/2022-08-30-225631_public-pictures/: down.sql  up.sql
migrations/2022-09-26-205851_albums/: up.sql
migrations/2022-10-06-235728_picture-extract-version/: down.sql  up.sql
migrations/2022-10-20-010646_picture-user-access/: down.sql  up.sql
migrations/2024-05-11-102618_posts/: down.sql  up.sql
packages-js/web/: index.html  package.json  tsconfig.json  vite.config.mts  vite.config.ts
packages-js/web/src/: App.tsx  index.tsx
packages-js/web/src/api/: api.ts  client.ts  index.ts  pagination.ts  utils.ts
packages-js/web/src/components/: AdminFence.tsx  AuthFence.tsx
packages-js/web/src/providers/: Identity.ts
packages-js/web/src/types/: album.ts  id.ts  picture.ts  post.ts  user.ts
packages-js/web/src/utils/: errors.ts  (+2 more)
src/: cli_args.rs  errors.rs  exif_helpers.rs  extract_pictures.rs  jwt.rs  main.rs  schema.rs
src/api/: mod.rs  pagination.rs  utils.rs
src/api/routes/: albums.rs  mod.rs  pictures.rs  posts.rs  users.rs
src/database/: mod.rs  pool.rs
src/graphql/: handler.rs  mod.rs  model.rs
src/graphql/resolvers/: mutation.rs  query.rs
src/models/: album.rs  camera_body.rs  camera_lenses.rs  mod.rs  picture.rs  picture_album.rs  picture_size.rs  picture_user_access.rs  pictures.rs  post_includes.rs  post_user_access.rs  posts.rs  user.rs
src/models/posts/: content.rs
src/user/: handler.rs  mod.rs  model.rs  util.rs
src/user/service/: list.rs
(+101 files in other folders)
