[package]
name = "eye"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.1.0"
diesel = { version = "1.4.7", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8"
jsonwebtoken = "8"
time = "0.2"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
shrinkwraprs = "0.2"
clap = { version = "3.0", features = ["derive", "env"] }
regex = "1"
