[package]
name = "eye"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.1.0"
blurhash = "0.1.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0", features = ["derive", "env"] }
diesel = { version = "2.1.6", features = ["postgres", "chrono", "r2d2", "serde_json"] }
dotenv = "0.15"
env_logger = "0.7.1"
image = "0.24.3"
jsonwebtoken = "8"
kamadak-exif = "0.5.4"
log = "0.4.8"
r2d2 = "0.8"
rand = "0.8.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
shrinkwraprs = "0.2"
thiserror = "1.0"
time = "0.2"
walkdir = "2"
